[package]
name = "icedcomm-i2p"
version = "1.0.0-beta.2"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio", "wgpu", "image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "time", "fs", "signal"] }
sha2 = "0.10"
base64 = "0.22"
data-encoding = "2.6"
ed25519-dalek = "2"
fs2 = "0.4"
argon2 = "0.5"
flate2 = "1"
tar = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
crypto_secretbox = "0.1"
rand_core = { version = "0.6", features = ["getrandom"] }
rfd = "0.15"
arboard = "3"
hex = "0.4"
